--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/react-native": "^5.0.4",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@types/dotenv": "^8.2.0",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-otp-input": "^2.0.1",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux-persist": "^4.3.1",
+    "axios": "^1.3.4",
+    "clsx": "^1.2.1",
+    "dotenv": "^16.0.3",
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
+    "i18next": "^22.4.10",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.3",
+    "react-otp-input": "^2.4.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +38,7 @@
     "@types/react": "^18.0.28",
     "@types/react-test-renderer": "^18.0.0",
     "babel-plugin-module-resolver": "^5.0.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "typescript": "^4.9.5"
   },
   "private": true
