--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/dotenv": "^8.2.0",
     "@types/react-dom": "^18.0.11",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-otp-input": "^2.0.1",
     "@types/react-redux": "^7.1.25",
     "@types/redux-persist": "^4.3.1",
+    "antd-mobile-rn": "^2.3.3",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
@@ -25,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
+    "react-native-vector-icons": "^9.2.0",
     "react-otp-input": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
