--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-otp-input": "^2.0.1",
     "@types/react-redux": "^7.1.25",
     "@types/redux-persist": "^4.3.1",
+    "ant-mobile": "^0.0.0",
     "antd-mobile-rn": "^2.3.3",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
@@ -27,6 +28,9 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
+    "react-native-paper": "^5.2.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-otp-input": "^2.4.0",
     "react-redux": "^8.0.5",
