--- a/package.json
+++ b/package.json
@@ -11,26 +11,34 @@
   "dependencies": {
     "@ant-design/react-native": "^5.0.4",
     "@reduxjs/toolkit": "^1.9.3",
+    "@rneui/base": "^0.0.0-edge.2",
+    "@rneui/themed": "^0.0.0-edge.2",
     "@types/dotenv": "^8.2.0",
     "@types/react-dom": "^18.0.11",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-otp-input": "^2.0.1",
     "@types/react-redux": "^7.1.25",
+    "@types/react-router-native": "^5.1.3",
     "@types/redux-persist": "^4.3.1",
+    "antd-mobile": "^5.28.1",
     "antd-mobile-rn": "^2.3.3",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
+    "history": "^5.3.0",
     "i18next": "^22.4.10",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
+    "react-native-paper": "^5.2.0",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-otp-input": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-router-native": "^6.8.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1"
   },
