--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^5.0.4",
+    "@expo/webpack-config": "^18.0.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
@@ -35,10 +36,11 @@
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.10",
     "react-otp-input": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
-    "react-router-native": "^6.8.1",
+    "react-router-native": "^6.8.2",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1"
   },
