--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "chat-app-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "../assets/images/Logo/logo.svg",
+    "icon": "../../../assets/images/Logo/logo.png",
     "userInterfaceStyle": "light",
     "splash": {
       "resizeMode": "contain",
